# test_modal

./: .gitignore  README.md  main.py  pyproject.toml  test.py
ai_audit_image/: check_color.py  check_crop.py  check_photo_color.py  check_size.py  check_texture.py  check_texture_opacity.py  main.py  pyproject.toml
ai_audit_image/prompt/: audit_crop.txt
ai_audit_image/prompt/3d/: audit_layout.txt  audit_style.txt
ai_audit_image/prompt/illustration/: audit_layout.txt  audit_stroke.txt  audit_texture.txt
ai_audit_image/prompt/photography/: audit_safezone.txt  text_audit.txt
ai_media_pipeline/: docker-compose.yml  requirements.txt
ai_media_pipeline/app/: config.py  main.py
ai_media_pipeline/app/middleware/: validation.py
ai_media_pipeline/app/routers/: media.py
ai_media_pipeline/app/services/: cache_service.py  media_service.py  operation_router.py  s3_service.py
ai_media_pipeline/app/utils/: hashing.py  stroke_uniformity.py
ai_media_pipeline/app/workers/: celery_app.py  tasks.py
ai_media_pipeline/docker/: Dockerfile.api  Dockerfile.worker
ai_media_pipeline/tests/: test_api.py  test_operation_router.py  test_validation.py
test_vision_model/: ahihi.py  flux_2.py  flux_2_edit_image.py  gemini_flex.py  ltx2.py  ltx2_distil.py  main.py  pyproject.toml  qwen_image_edit.py  zimage_edit.py
trust_quiz/: index.html  package-lock.json  package.json  skill.MD  vite.config.js
trust_quiz/src/: App.css  App.jsx
trust_quiz/src/components/: QuizEngine.jsx  StartPage.jsx
trust_quiz/src/data/: questions.js
trust_quiz/src/hooks/: useFaceMesh.js
