[project]
name = "test-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.8.0",
    "modal>=1.4.1",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "opencv-contrib-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]

[tool.uv.workspace]
members = ["test_vision_model"]
